Thursday, 8th May 2003, James Turner <james@worldforge.org>

	* Updated configure.in to be Autoconf 2.5 happy, removed lots
	  of deprecated macros
	* We now rely on pkg-config versions of sigc++ and all the 
	  WorldForge libs, so configure is smaller and all the
	  AM_PATH_xxx copies in acinclude.m4 go away and die.
	* Made the WFmath handling sane too (we had extra -lwfmath
	  and such in ERIS_LIBS, which is unecessary since pkg-config
	  will pick that stuff up for us)

Thursday, 8th May 2003, Ron Steinke

	* Added typemaps to perl MANIFEST
	* Added a dependency on the build library to
	  bindings/perl-makefile.stamp, so the modules
	  get rebuilt if the lib does

Thursday, 8th May 2003, Ron Steinke

	* Missed bindings/perl/compile_flags.in. Note that
	  make distcheck will still not work when building
	  the perl bindings, since makemaker can't handle
	  having $(srcdir) and $(bindir) be different

Thursday, 8th May 2003, Ron Steinke

	* Added a dist-hook so the perl bindings make it into
	  the automake tarball
	* Fixed the way the perl bindings include the eris
	  headers to match the new way of doing things

Wednesday, 7th May 2003, James Turner <james@worldforge.org>

    * Updated README, INSTALL and AUTHORS in anticipation of
      a stable release fairly soon.

Tuesday, 6th May 2003, Ron Steinke

	* Further perl bindings build fixes

Tuesday, 6th May 2003, Ron Steinke

	* Fixed a problem with the perl bindings not getting
	  the atlas compile flags, generally cleaned up
	  the passing of those flags from autoconf to
	  the perl makemaker build system

Friday, 2nd May 2003, Al Riddoch

	* Move code from src subdir to Eris.

	* Add second .pc file for glib headers, sort out which version of glib
	  it depends on, and sort out to handle it in the rpm.

Tuesday, 22nd April 2003, James Turner

	* updated README / INSTALL to be up-to-date for the next
	  release, and converted to plain text (from Abiword)

Monday, 24th March 2003, Al Riddoch
