@@ -1,3 +1,8 @@
+Thursday, 8th May 2003, Al Riddoch <alriddoch@zepler.org>
+
+	* test/tests.cpp: Return with the correct exit status if the
+	  tests fail.
+
 Thursday, 8th May 2003, James Turner <james@worldforge.org>
 
 	* Updated configure.in to be Autoconf 2.5 happy, removed lots
